- Added OpenAPI request bodies to PUT and POST along with min values to the user - Switched to using the OpenAPI generator - Removed hand-written API models in favor of the generated ones - Added DbModel suffix to MobileSubscription entity - Added DB uniqueness to the msisdn field - Added name to DB entity - Implemented the API along with the Exception handler
